@@ -1,2 +1,1 @@
 10
-9  add get() method to Stack<> allowing to read without removal + add tests.
